@@ -65,3 +65,5 @@
 2015-09-24  32  TODO Smashing
 2015-09-26  19  TODO Smashing
 2015-09-27  15  Import Improvements
+2015-09-29  15  Import bugfix
+2015-09-30  16  Import bug finally fixed!
